feat(rag): 实现查询转换器管线和新扩展阶段
- 新增 QueryTransformerPipeline 和 ExpandingStage 类
- 重构 DynamicModelManager 类，支持创建和管理查询转换器管线
- 修改 IntentAwareQueryTransformer 类，使用 DynamicModelManager 获取模型实例
- 删除了 AI模型审核功能说明.md 文件